--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 PORT=8000
 CORS_ORIGIN=*
 MONGODB_URI=mongodb+srv://Sheraz:Sheraz12345@cluster0.wnat3ns.mongodb.net
+ACCESS_TOKEN_SECRET=Sheraz12345 
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=12345Sheraz
+REFRESH_TOKEN_EXPIRY=10d
+CLOUDINARY_NAME=sheraz
+CLOUDINARY_API_KEY=746895579248582
+CLOUDINARY_API_SECRET=lFxFO-QTOnftR8KQ6BDs4rR5Dj8
